--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ h2 {
 .item-box {
   text-align: center;
   padding: 70px;
+  cursor: pointer;
 }
 
 .item-box:hover .more {
@@ -59,5 +60,12 @@ h2 {
 .link {
   text-decoration: none;
   color: black;
+}
+
+.back {
+  font-weight: bold;
+  font-size: 20px;
+  color: red;
+  cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
